- read all of https://www.ine.pt/revstat/pdf/rs120102.pdf and coles (2001)
- if lmomco parkap is changed, change distLfit:154 and distLgof:154 (or leave it...)
- distLextreme correct RP for POT approach
- consider option to change all messages to warnings 
     if(mes2warn) message <- function(...) warning(..., call.=FALSE)


---------------------------------------
extremeStat Package by Berry Boessenkool, berry-b@gmx.de
Any feedback is welcome, per email or on github.com/brry/extremeStat
---------------------------------------


Version 0.6.0 (2016-12-12)
For complete log, see https://github.com/brry/extremeStat/commits/master
- several lmomco changes reflected
- several rare errors (especially with very small sample sizes) captured
- documentation updated, vignette clarified
- distLextreme truncate bug corrected (was not passed to distLfit)
- Licence made less restrictive (GPL3 changed to GPL>=2)
- q_gpd captures (and reflects on) more potential errors
- distLquantile q_gpd rownames are unified and sorted differently
- distLgofPlot gained more customization options


---------------------------------------
---------------------------------------


Version 0.5.15 (2016-05-11)
submitted to CRAN
various changes, see github commit log at
https://github.com/brry/extremeStat/commits/master
highlights:
- package has a vignette and is Roxygenized
- quantile estimation now possible, function tested and expanded thoroughly
- POT method (truncation parameter) introduced
- GPD quantile comparison across 7 R packages
- failed parameter fitting is handled much better, warning messages became useful
- quiet argument added throughout the package
- several defaults were improved 
- documentation was updated and enhanced, including comments in code
- distLgof now returns weights calculated by 3 different methods
- distLplot now uses supdist, package depends on lmomco >=2.1.3 (version that includes supdist)